[project]
name = "The-AI-Doctors-Clinical-Tools"
description = "Nodes: Multi Int and Multi Text; allows for the creation of multiple int, floats and string storage and output from a single node."
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/BlueprintCoding/ComfyUI_AIDocsClinicalTools/"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "theaidoctor"
DisplayName = "ComfyUI_AIDocsClinicalTools"
Icon = ""